--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,14 @@
 			<artifactId>jackson-core</artifactId>
 			<version>2.9.9</version>
 		</dependency>
+	
+		<!--JSON_SIMPLE -->
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+
 
 		<!-- AspectJ -->
 		<dependency>
